add etc && eth modules
